--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,13 @@
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
+.whatsapp{
+  width: 50px;
+  z-index: 1000;
+  position: fixed;
+  bottom: 50px;
+  left: 50px;
+}
 
 *,
 ::before,
@@ -893,6 +900,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .right-6{
   right: 1.5rem;
+}
+
+.left-6{
+  left: 1.5rem;
 }
 
 .top-0{
